--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -104,7 +104,7 @@
   justify-content: center;
   flex-direction: column;
   padding: 9.6rem 1rem;
-  background-image: url("../assets/images/CalltoAction.png");
+  background-image: url("/images/CalltoAction.png");
   background-repeat: no-repeat;
   background-size: 100% 396px;
   border-radius: 1.6rem;
