--- a/src/styles/recipes.css
+++ b/src/styles/recipes.css
@@ -165,8 +165,16 @@
 .product__list-button {
   width: 100%;
   height: 48px;
-  padding: 0;
   border-radius: 999px;
+  background-color: var(--neutral-900);
+  font-family: var(--font-nunito);
+  font-weight: bold;
+  font-size: var(--font-7-size);
+  border: none;
+  color: white;
+}
+.product__list-button:hover {
+  background-color: var(--neutral-600);
 }
 /* responsive 850px */
 @media screen and (max-width: 850px) {
